--- a/src/app/shop-menu-select/shop-menu-select.page.html
+++ b/src/app/shop-menu-select/shop-menu-select.page.html
@@ -36,7 +36,7 @@
 
         <div *ngFor="let c of cate">
           <div *ngIf="c.categoryId == segmentValue">
-            <ion-item *ngFor="let p of c?.products" color="tertiary">
+            <ion-item *ngFor="let p of c?.products" color="tertiary" (click)="onSelect(p._id)">
               <ion-thumbnail slot="start" class="ion-margin-vertical">
                 <img
                   [src]=" p.previewImageUrl ? p.previewImageUrl :'https://travel.mthai.com/app/uploads/2014/07/%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B8%97%E0%B8%B4%E0%B8%A7%E0%B8%97%E0%B8%B1%E0%B8%A8%E0%B8%99%E0%B9%8C%E0%B8%AA%E0%B8%A7%E0%B8%A2%E0%B9%86-14.jpg'">
