--- a/src/app/shop-select/shop-select.page.html
+++ b/src/app/shop-select/shop-select.page.html
@@ -5,20 +5,20 @@
 </ion-header>
 
 <ion-content color="tertiary" class="ion-padding-top" mode="ios">
-  <ng-container *ngIf="data$ | async as data">
-    <ion-list color="tertiary">
+  <ng-container *ngIf="hasLoaded == 'y'">
+    <ion-list *ngIf="data$ | async as data" color="tertiary">
       <ion-list-header color="tertiary" mode="md">
         <ion-label color="danger">
-          <h1>ร้านแนะนำ</h1>
+          <h1><b>ร้านแนะนำ</b></h1>
         </ion-label>
       </ion-list-header>
-        <ion-item color="tertiary" lines="none" *ngFor="let item of data">
+        <ion-item color="tertiary" lines="none" *ngFor="let item of data" (click)="onSelect(item._id)">
           <div class="ion-margin-end">
             <img [src]="item.logoImage" alt="">
             <ion-label class="ion-text-center">
               <p><b>{{ item.name }}</b></p>
             </ion-label>
-            <ion-row>
+            <!-- <ion-row>
               <ion-col>
                 <ion-label>
                   <ion-text color="medium" >
@@ -33,9 +33,58 @@
                   </ion-text>
                 </ion-label>
               </ion-col>
-            </ion-row>
+            </ion-row> -->
           </div>
         </ion-item>
     </ion-list>
+  </ng-container>
+
+  <ng-container *ngIf="!hasLoaded">
+    <ion-item lines="none">
+      <ion-skeleton-text animated style="height: 70px; width: 100%;"></ion-skeleton-text>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label>
+        <ion-skeleton-text animated></ion-skeleton-text>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-skeleton-text animated style="height: 70px; width: 100%;"></ion-skeleton-text>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label>
+        <ion-skeleton-text animated></ion-skeleton-text>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-skeleton-text animated style="height: 70px; width: 100%;"></ion-skeleton-text>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label>
+        <ion-skeleton-text animated></ion-skeleton-text>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+        <h3>
+          <ion-skeleton-text animated></ion-skeleton-text>
+        </h3>
+      </ion-label>
+    </ion-item>
+
   </ng-container>
 </ion-content>
